# ForceSubYuuki

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.json  config.py  main.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: docker.yml
bot/: client.py
bot/utils/: cache.py  db.py  logger.py  misc.py
plugins/: __init__.py  batch.py  broadcast.py  configs.py  debug.py  generate.py  helpers.py  start.py
